fix success contrast

--- a/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_moving_columns.scss
+++ b/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_moving_columns.scss
@@ -360,7 +360,6 @@ A list of alert messages to notify users in the moving column
 
     &.m-success {
         background: $color-function-positive;
-        color: $color-text-inverted;
     }
 }
 
